--- a/views/banner.html
+++ b/views/banner.html
@@ -1,45 +1,89 @@
 {{!< layout/admin-layout}}
-
 {{#extend "css"}}
-<script src="https://unpkg.com/read-excel-file@4.1.0/bundle/read-excel-file.min.js"></script>
-<link rel="stylesheet" type="text/css" href="/public/modules/banner/banner.css">
+<link rel="stylesheet" type="text/css" href="/public/modules/users/users.css">
 <link rel="stylesheet" href="/public/css/toastr.min.css">
 {{/extend}}
-<br>
-<h3>Administrador de Banner</h3>
 
-<button id="nuevoBannerBtn" type="button" class="btn btn-lg"><i class="fas fa-plus"></i> Nuevo banner</button>
 
-<hr>
-<div class="col-md-12 col-xs-12 box-shadows table-responsive">
-  <table id="bannersTable" class="table table-striped table-bordered moduleTable" style="width:100%">
-    <thead>
-        <tr>
-            <th>Nombre</th>
-            <th>Imagen movíl</th>
-            <th>URL</th>
-            <th>Modificar</th>
-            <th>Eliminar</th>
-        </tr>
-    </thead>
-  </table>
+<div class="row">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-2 col-xs-12">
+                <br>
+                <button class="btn btn-dark btn-block" id="optionCreateShoe">
+                    <i class="fas fa-arrow-circle-left"></i> Crear/Ingresar calzado 
+                </button>
+                <hr>
+                <button class="btn btn-dark btn-block" id="optionModShoe" disabled>
+                    <i class="fas fa-shoe-prints"></i> Modificar calzado
+                </button>
+                <button class="btn btn-dark btn-block" id="optionDeleteShoe" disabled>
+                    <i class="fas fa-trash-alt"></i> Eliminar calzado
+                </button>
+            </div>
+            <br>
+            <br>
+            <div class="col-md-10 col-xs-12 table-responsive">
+                <table id="tableShoes" class="display nowrap table table-condensed" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Codigo</th>
+                            <th>Marca</th>
+                            <th>Modelo</th>
+                            <th>Talla</th>
+                            <th>Color</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
 
-<div class="modal fade" id="modal"  role="dialog" aria-labelledby="modal">
-  <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h4 class="modal-title" id="modal_title"></h4>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                  <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
-          <div class="modal-body" id="modal_body"></div>
-          <div class="modal-footer" id="modal_footer"></div>
-      </div>
-  </div>
+<div class="modal fade" id="shoesModal" tabindex="-1" role="dialog" aria-labelledby="modal_title">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4 class="modal-title" id="modal_title"></h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body" id="modal_body"></div>
+            <div class="modal-footer" id="modal_footer"></div>
+        </div>
+    </div>
 </div>
 
 {{#extend "js"}}
 <script src="/public/modules/banner/banner.js"></script>
+{{/extend}}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{#extend "js"}}
+<script>
+
+</script>
 {{/extend}}
