--- a/views/layout/admin-layout.html
+++ b/views/layout/admin-layout.html
@@ -21,7 +21,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-      <img src="/public/img/LOGO_CATALOGO.png" alt="" width="150" height="70">
+      <!-- <img src="/public/img/LOGO_CATALOGO.png" alt="" width="150" height="70"> -->
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
