--- a/public/modules/admin/admin-nav.css
+++ b/public/modules/admin/admin-nav.css
@@ -107,7 +107,7 @@ h3{
     display: flex;
     justify-content: center;
 }
-#nuevoBannerBtn{
+#nuevoproductBtn{
     background-color: #005EB8;
     color: white;
 }
