--- a/views/layout/admin-layout.html
+++ b/views/layout/admin-layout.html
@@ -43,7 +43,7 @@
             {{/if}}
             <a class="dropdown-item" href="/admin"><i class="fas fa-boxes"></i> Productos</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/banner"><i class="fas fa-image"></i> Banner</a>
+            <a class="dropdown-item" href="/product"><i class="fas fa-image"></i> product</a>
           </div>
         </li>
         <li class="nav-item dropdown mainNav">
