--- a/public/modules/users/users.css
+++ b/public/modules/users/users.css
@@ -1,11 +1,11 @@
 
 .container-fluid{
     padding-bottom: 20px;
-    background-color: #005EB8;
+    background-color: #535455;
 }
 
 .fa-user-plus {
-    color: #005EB8;
+    color: #535455;
 }
 
 .fa-user-edit {
