--- a/public/modules/product/product.css
+++ b/public/modules/product/product.css
@@ -1,5 +1,5 @@
 #nuevoproductBtn {
-    background-color: #005EB8;
+    background-color: #535455;
     color: white;
     font-family: 'SFProDisplay-Light';
     margin-left: 50px;
