ventas y carga de datos

--- a/views/product.html
+++ b/views/product.html
@@ -28,10 +28,13 @@
                     <thead>
                         <tr>
                             <th>Codigo</th>
+                            <th>Nombre</th>
                             <th>Marca</th>
-                            <th>Modelo</th>
                             <th>Talla</th>
                             <th>Color</th>
+                            <th>Cantidad</th>
+                            <th>Categoria</th>
+                            <th>Precio</th>
                         </tr>
                     </thead>
                 </table>
