--- a/views/admin.html
+++ b/views/admin.html
@@ -21,12 +21,12 @@
 </style>
 {{/extend}}
 <br>
-<h3>Administrador de Productos</h3>
+<h3>STOCK de Productos</h3>
 
 <div class="row alineacion">
   <div class="col-md-2 col-sm-4 col-xs-12">
     <button class="btn btn-lg" type="button" id="nuevaCargaBtn">
-        <i class="fas fa-plus"></i>&nbsp;Nueva Carga Excel
+        <i class="fas fa-plus"></i>&nbsp;Nueva venta
     </button>
   </div>
 
@@ -54,13 +54,14 @@
   <table id="productsTable" class="table table-striped table-bordered moduleTable" style="width:100%">
     <thead>
         <tr>
-            <th>SKU</th>
-            <th>Título</th>
-            <th>Categoria Padre</th>
-            <th>Sub categoria</th>
-            <th>Destacado</th>
-            <th>Modificar</th>
-            <th>Eliminar</th>
+            <th>Codigo</th>
+            <th>Nombre</th>
+            <th>Marca</th>
+            <th>Talla</th>
+            <th>Color</th>
+            <th>Cantidad</th>
+            <th>Categoria</th>
+            <th>Precio</th>
         </tr>
     </thead>
   </table>
