--- a/views/layout/admin-layout.html
+++ b/views/layout/admin-layout.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Administración</title>
+  <title>Stock y ventas</title>
   <link rel="stylesheet" href="/public/css/select2.min.css">
   <link rel="stylesheet" href="/public/css/toastr.min.css">
   <link rel="stylesheet" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css">
@@ -41,9 +41,9 @@
             <a class="dropdown-item" href="/users"><i class="fas fa-users"></i> Usuarios</a>
             <div class="dropdown-divider"></div>
             {{/if}}
-            <a class="dropdown-item" href="/admin"><i class="fas fa-boxes"></i> Productos</a>
+            <a class="dropdown-item" href="/admin"><i class="fas fa-boxes"></i> Stock y Ventas</a>
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="/product"><i class="fas fa-image"></i> product</a>
+            <a class="dropdown-item" href="/product"><i class="fas fa-image"></i> Admin Bodega</a>
           </div>
         </li>
         <li class="nav-item dropdown mainNav">
