--- a/views/layout/no-loged.html
+++ b/views/layout/no-loged.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Catalogo</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="/public/bootstrap-4.5.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/public/fontawesome-free-5.15.2-web/css/all.min.css">
