--- a/views/product.html
+++ b/views/product.html
@@ -14,7 +14,7 @@
                     <i class="fas fa-arrow-circle-left"></i> Crear/Ingresar calzado
                 </button>
                 <hr>
-                <button class="btn btn-dark btn-block" id="optionModShoe" disabled>
+                <button class="btn btn-dark btn-block" id="optionModShoes" disabled>
                     <i class="fas fa-shoe-prints"></i> Modificar calzado
                 </button>
                 <button class="btn btn-dark btn-block" id="optionDeleteShoe" disabled>
