--- a/views/admin.html
+++ b/views/admin.html
@@ -21,7 +21,7 @@
 </style>
 {{/extend}}
 <br>
-<h3>STOCK de Productos</h3>
+<h3>Venta de Productos</h3>
 
 <div class="row alineacion">
   <div class="col-md-2 col-sm-4 col-xs-12">
@@ -30,7 +30,7 @@
     </button>
   </div>
 
-  <div class="col-md-2 col-sm-6 col-xs-12">
+  <!-- <div class="col-md-2 col-sm-6 col-xs-12">
     <div class="card">
         <div class="card-body" style="padding:0px;">
             <center>
@@ -44,7 +44,7 @@
             </center>
         </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 
