--- a/views/admin.html
+++ b/views/admin.html
@@ -55,20 +55,16 @@
     <thead>
         <tr>
             <th>Codigo</th>
-            <th>Nombre</th>
-            <th>Marca</th>
-            <th>Talla</th>
-            <th>Color</th>
-            <th>Cantidad</th>
-            <th>Categoria</th>
-            <th>Precio</th>
+            <th>Fecha emision</th>
+            <th>Total</th>
+
         </tr>
     </thead>
   </table>
 </div>
 
 <div class="modal fade" id="modal"  role="dialog" aria-labelledby="modal">
-  <div class="modal-dialog modal-lg" role="document">
+  <div class="modal-dialog modal-xl" role="document">
       <div class="modal-content">
           <div class="modal-header">
               <h4 class="modal-title" id="modal_title"></h4>
