--- a/public/modules/product/product.css
+++ b/public/modules/product/product.css
@@ -8,3 +8,9 @@ h3{
     display: flex;
     justify-content: center;
 }
+
+.div1{
+    background: grey;
+    height: 200px;
+    width: 200px;
+  }
