--- a/views/layout/admin-layout.html
+++ b/views/layout/admin-layout.html
@@ -88,6 +88,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/exceljs/4.2.1/exceljs.min.js"></script>
 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
   {{#block "js"}}
   {{/block}}
 </body>
