--- a/views/product.html
+++ b/views/product.html
@@ -59,6 +59,8 @@
 </div>
 
 {{#extend "js"}}
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+
 <script src="/public/modules/product/product.js"></script>
 {{/extend}}
 
